// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="source-viewer-header-slim display-flex-row display-flex-space-between"
>
  <div
    className="display-flex-center flex-1"
  >
    <div>
      <a
        className="link-with-icon"
        href="/dashboard?id=my-project"
      >
        <QualifierIcon
          qualifier="TRK"
        />
         
        <span>
          MyProject
        </span>
      </a>
    </div>
    <div
      className="spacer-left"
    >
      <QualifierIcon
        qualifier="FIL"
      />
       
      <span>
        foo/
      </span>
      <span
        className="component-name-file"
      >
        bar.ts
      </span>
    </div>
    <div
      className="spacer-left"
    >
      <ClipboardIconButton
        className="button-link link-no-underline"
        copyValue="foo/bar.ts"
      />
    </div>
  </div>
  <div
    className="flex-0 big-spacer-left"
  >
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "fileUuids": "foo-bar",
            "id": "my-project",
            "resolved": "false",
          },
        }
      }
    >
      source_viewer.view_all_issues
    </Link>
  </div>
  <DeferredSpinner
    className="little-spacer-right"
    timeout={100}
  >
    <div
      className="flex-0 big-spacer-left"
    >
      <ButtonIcon
        className="js-actions"
        onClick={[MockFunction]}
      >
        <ExpandSnippetIcon />
      </ButtonIcon>
    </div>
  </DeferredSpinner>
</div>
`;

exports[`should render correctly for subproject 1`] = `
<div
  className="source-viewer-header-slim display-flex-row display-flex-space-between"
>
  <div
    className="display-flex-center flex-1"
  >
    <div>
      <a
        className="link-with-icon"
        href="/dashboard?id=my-project"
      >
        <QualifierIcon
          qualifier="TRK"
        />
         
        <span>
          MyProject
        </span>
      </a>
    </div>
    <QualifierIcon
      qualifier="BRC"
    />
     
    <span>
      Foo
    </span>
    <div
      className="spacer-left"
    >
      <QualifierIcon
        qualifier="FIL"
      />
       
      <span>
        foo/
      </span>
      <span
        className="component-name-file"
      >
        bar.ts
      </span>
    </div>
    <div
      className="spacer-left"
    >
      <ClipboardIconButton
        className="button-link link-no-underline"
        copyValue="foo/bar.ts"
      />
    </div>
  </div>
  <div
    className="flex-0 big-spacer-left"
  >
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "fileUuids": "foo-bar",
            "id": "my-project",
            "resolved": "false",
          },
        }
      }
    >
      source_viewer.view_all_issues
    </Link>
  </div>
  <DeferredSpinner
    className="little-spacer-right"
    timeout={100}
  >
    <div
      className="flex-0 big-spacer-left"
    >
      <ButtonIcon
        className="js-actions"
        onClick={[MockFunction]}
      >
        <ExpandSnippetIcon />
      </ButtonIcon>
    </div>
  </DeferredSpinner>
</div>
`;
